# nata

./: Cargo.toml  README.md
src/: cli.rs  error.rs  fs_utils.rs  main.rs  undo.rs
src/organizer/: by_date.rs  by_extension.rs  ensure_dir.rs  mod.rs  move_file.rs  undo.rs
tests/: organize_cli.rs
